# metapulsar

./: .cursorrules  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  PAUSE  README.md  check_pulsars.py  combine_ipta_pulsars.py  global_covar.cvm  integration_tests_template.txt  metapulsar.py  notes.md  pyproject.toml  pytest.ini  run_ipta_models.py  run_ipta_models.sub  setup.py
.devcontainer/: Dockerfile  Dockerfile.amd64  Dockerfile.apple.baseimage  devcontainer-amd64.json  devcontainer.json
.github/: codecov.yml
.github/workflows/: ci_test.yml
docs/: API_REFERENCE.md  METHOD_DESCRIPTION.md  Makefile  QUICK_GUIDE.md  USER_GUIDE.md  api_reference.md  architecture-overview.md  conf.py  coordinate_discovery_optimization.md  developer_guide.md  elong_elat_support_verification.md  enterprise_integration_guide.md  faq.md  index.rst  optimization_verification_summary.md  parfile_manager_guide.md  pattern_discovery_guide.md  performance.md  position_helpers_consolidation.md  selection_utils_api.md  troubleshooting.md  user_guide.md
examples/: README.md  basic_workflow.py  compare_feather_metapulsars.py  custom_pta_configuration.py  enterprise_integration.py  factory_usage_example.py  parameter_management.py  parfile_manager_usage.py  pattern_discovery_integration.py  performance_comparison.py  staggered_selection_usage.ipynb  test_examples.py  using_metapulsar.py
examples/notebooks/: 01_basic_usage.ipynb  02_parameter_management.ipynb  03_custom_pta_configuration.ipynb  04_enterprise_integration.ipynb  global_covar.cvm  staggered_selection_usage.ipynb  using_metapulsar.ipynb
legacy/: backfill.py  check_pulsars.py  combine_ipta_pulsars.py  combine_ipta_pulsars.sub  metapulsar.py  run_ipta_models.py
scripts/: generate_test_parfiles.py
src/ipta_metapulsar/: __init__.py  meta_pulsar_factory.py  metapulsar.py  metapulsar_parameter_manager.py  mockpulsar.py  parameter_manager.py  parameter_resolver.py  parfile_manager.py  pint_helpers.py  position_helpers.py  pta_registry.py  selection_utils.py
src/ipta_metapulsar_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/metapulsar/: __init__.py  file_discovery_service.py  metapulsar.py  (+14 more)
tests/: conftest.py  test_coordinate_based_discovery.py  test_file_discovery_service.py  test_layout_discovery_service.py  test_libstempo_adapter.py  test_meta_pulsar_factory.py  test_metapulsar_data_combination.py  test_metapulsar_design_matrix.py  test_metapulsar_factory.py  test_metapulsar_parameter_manager.py  test_metapulsar_parameter_manager_legacy.py  test_metapulsar_position_and_finalization.py  test_metapulsar_with_parameter_manager.py  test_mockpulsar.py  test_parameter_manager.py  test_parameter_manager_legacy.py  test_parameter_resolver.py  test_parfile_manager.py  test_pattern_discovery_engine.py  test_pint_helpers.py  test_position_helpers.py  test_position_helpers_skycoords.py  test_pta_registry.py  test_pulse_tracking.py  test_selections.py  test_tim_file_analyzer.py
(+61 files in other folders)
